# metra-mcp

./: .env.example  .gitignore  LICENSE  README.md  mcp-config-example.json  pyproject.toml
deploy/: metra-mcp.service
src/metra_mcp/: __init__.py  client.py  gtfs.py  server.py  stats.py
src/metra_mcp/web/: docs.html  index.html  stats.html
